# cross-chain-bridge

./: .gitignore  README.md
assets/diagrams/: bridge-map.psd  bridge.psd
assets/postman/v2/: Bridge.postman_collection.json
assets/postman/v2.1/: Bridge.postman_collection.json
bridge-accounts-creator/: Creator.dev.dockerfile  go.mod  go.sum  main.go
bridge-accounts-creator/src/app/: app.go
bridge-accounts-creator/src/routes/: routes.go
bridge-broker/: Broker.dev.dockerfile  go.mod  go.sum  main.go
bridge-broker/src/app/: app.go
bridge-broker/src/config/: config.go
bridge-broker/src/routes/: routes.go
bridge-builder/: docker-compose.yaml
bridge-contracts-provider/: ContractsProvider.dev.dockerfile  go.mod  main.go
bridge-contracts-provider/src/app/: app.go
bridge-contracts-provider/src/config/: config.go
bridge-contracts-provider/src/data/: __contracts.json  contracts.json
bridge-contracts-provider/src/models/: contract.go
bridge-contracts-provider/src/routes/: routes.go
bridge-eth-compiler/: EthCompiler.dev.dockerfile  go.mod  main.go
bridge-eth-compiler/src/app/: app.go
bridge-eth-compiler/src/routes/: routes.go
bridge-eth-deployer/: EthDeployer.dev.dockerfile  go.mod  go.sum  main.go
bridge-eth-deployer/src/app/: app.go
bridge-funds-transporter/: Transporter.dev.dockerfile  go.mod  go.sum  main.go
bridge-solana-deployer/: .dockerignore  Cargo.toml  SolanaDeployer.dev.dockerfile
bridge-solana-deployer/src/: main.rs  services.rs
bridge-storage/: Storage.dev.dockerfile  go.mod  go.sum  main.go
(+43 files in other folders)
